--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "main": "out/main",
   "scripts": {
     "start": "electron-forge start",
+    "start-web": "run-p start:client start:server start:webview",
+    "start:client": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack-web/webpack.browser.config.js --progress --color --watch",
+    "start:webview": "webpack-dev-server --config ./build/webpack-web/webpack.webview.config.js",
+    "start:server": "cross-env EXT_MODE=js KTLOG_SHOW_DEBUG=1 IDE_DATA_FOLDER_NAME='.codefuse-ide' CODE_WINDOW_CLIENT_ID='CODE_WINDOW_CLIENT_ID' IDE_LOG_HOME=codefuse-log node --inspect=9991 -r ts-node/register -r tsconfig-paths/register ./src/web/node/index.ts",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "electron-rebuild": "node -r ts-node/register ./build/rebuild.ts",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "release": "standard-version",
-    "release:minor": "npm run release -- --release-as minor"
+    "release:minor": "npm run release -- --release-as minor",
+    "compile:webview": "cross-env NODE_ENV=production webpack --config ./build/webpack-web/webpack.webview.config.js",
+    "compile:browser": "webpack --config ./build/webpack-web/webpack.browser.config.js",
+    "compile:ext-host": "webpack --config ./build/webpack-web/webpack.ext-host.config.ts",
+    "compile:worker-host": "webpack --config ./build/webpack-web/webpack.worker-host.config.ts",
+    "compile:node": "webpack --config ./build/webpack-web/webpack.node.config.ts",
+    "postinstall": "patch-package && npm run compile:webview && npm run compile:ext-host && npm run compile:worker-host && npm run download:extensions",
+    "download:extensions": "node -r ts-node/register -r tsconfig-paths/register ./build/download-extensions.ts",
+    "build": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=5120 run-p compile:browser compile:node compile:worker-host compile:ext-host compile:webview"
   },
   "repository": {
     "type": "git",
@@ -34,6 +46,9 @@
     "@electron-forge/web-multi-logger": "^7.4.0",
     "@types/debug": "^4",
     "@types/js-yaml": "^4",
+    "@types/koa": "^2",
+    "@types/koa-bodyparser": "^4",
+    "@types/koa-static": "^4.0.2",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -47,16 +62,23 @@
     "css-loader": "6",
     "debug": "^4.3.6",
     "electron": "30.1.2",
+    "esbuild": "^0.19.10",
     "extract-zip": "^2.0.1",
     "fast-glob": "^3.3.2",
     "glob": "^11.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "listr2": "^8.2.4",
     "mini-css-extract-plugin": "^2.9.0",
     "node-gyp": "^10.2.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "npm-run-all": "^4.1.5",
     "null-loader": "^4.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "patch-package": "^8.0.0",
     "standard-version": "^9.5.0",
     "style-loader": "^4.0.0",
     "style-resources-loader": "^1.5.0",
@@ -87,6 +109,7 @@
     "@opensumi/ide-editor": "3.4.4",
     "@opensumi/ide-electron-basic": "3.4.4",
     "@opensumi/ide-explorer": "3.4.4",
+    "@opensumi/ide-express-file-server": "3.4.4",
     "@opensumi/ide-extension": "3.4.4",
     "@opensumi/ide-extension-manager": "3.4.4",
     "@opensumi/ide-extension-storage": "3.4.4",
@@ -110,6 +133,7 @@
     "@opensumi/ide-preferences": "3.4.4",
     "@opensumi/ide-process": "3.4.4",
     "@opensumi/ide-quick-open": "3.4.4",
+    "@opensumi/ide-remote-opener": "3.4.4",
     "@opensumi/ide-scm": "3.4.4",
     "@opensumi/ide-search": "3.4.4",
     "@opensumi/ide-status-bar": "3.4.4",
@@ -128,10 +152,12 @@
     "buffer": "^6.0.3",
     "electron-updater": "6.2.1",
     "js-yaml": "^4.1.0",
+    "koa-static": "^5.0.0",
     "mri": "^1.2.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "winston": "^3.15.0"
   },
   "packageManager": "yarn@4.3.1",
   "resolutions": {
